Issue #24 - crash on invalid JSON && fixed logo border on IE

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -286,6 +286,10 @@ ul.relevance_select>li.relevance_bad
 	color: #858585;
 	display: block;
 }
+#logo>img
+{
+	border: 0;
+}
 #logo>div
 {
 	position: absolute;
